@@ -6,6 +6,7 @@ Revision history for {{$dist->name}}
     operates on computers without a ~/.pause file.
   - Copy LICENSE from build to root and automatically commit it on release.
   - Add 'copy_files' attribute to specify additional files to copy from build.
+  - Bump ReadmeAnyFromPod prereq and set 'phase' to 'release'.
 
 4.203     2014-12-11T23:47:53Z
 
